--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -4,6 +4,10 @@
 // Font
 $mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
 
+
+$blue : #27348b;
+$yellow : #f8ff13;
+
 // Size
 $mainFontColor           : #101010;
 $mainFontSize            : 18px;
