--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -4,6 +4,11 @@
         padding: 2rem 0;
         display: flex;
         justify-content: center;
+        img {
+            @media only screen and (max-width: 568px) {
+                width: 200px;
+            }
+        }
     }
     &-wrapper {
         display: flex;
