--- a/src/assets/scss/components/modals.scss
+++ b/src/assets/scss/components/modals.scss
@@ -1,5 +1,5 @@
 .modal {
-    width: 700px;
+    width: 650px;
     display: grid;
     border-radius: 25px;
     background: #fff;
@@ -22,22 +22,52 @@
         }
     }
     &-checkbox {
+        margin-top: 1rem;
+        @media only screen and (max-width:550px) {
+            margin-top: 0.5rem;
+        }
         label {
             display: flex;
             align-items: baseline;
             input {
                 width: 25px;
             }
+            p {
+                padding-left: .5rem;
+                @media only screen and (max-width:550px) {
+                    font-size: 14px;
+                }
+                a {
+                    color: $blue;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+    &-pass {
+        display: flex;
+        justify-content: flex-end;
+        @media only screen and (max-width:550px) {
+            margin-top: 0.5rem;
+        }
+        a {
+            color: $blue;
+            text-decoration: underline;
+            @media only screen and (max-width:550px) {
+                font-size: 15px;
+            }
         }
     }
     &-tabs {
         display: flex;
-        padding-bottom: 2rem;
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
         h3 {
             font-size: 27px;
+            @media only screen and (max-width:550px) {
+                font-size: 18px;
+            }
         }
         &-item {
             width: 50%;
@@ -55,7 +85,6 @@
     }
     &--visible {
         display: block
-
     }
     &-overlay--visible {
         z-index: 100;
@@ -78,6 +107,9 @@
 
 .form {
     padding: 3rem;
+    @media only screen and (max-width:550px) {
+        padding: 1rem;
+    }
     &-wrapper {
         display: block;
         justify-content: center;
@@ -89,6 +121,67 @@
             font-size: 16px;
             border: 2px solid $blue;
             border-radius: 25px;
+            @media only screen and (max-width:550px) {
+                padding: 0.3rem 0.8rem;
+                margin-bottom: 0.5rem;
+                font-size: 14px;
+            }
+        }
+        &__links {
+            display: flex;
+            padding-bottom: 2rem;
+            @media only screen and (max-width:550px) {
+                padding-bottom: 0.6rem;
+            }
+        }
+        &__link {
+            display: flex;
+            align-items: center;
+            &:not(:first-child) {
+                margin-left: 5rem;
+                @media only screen and (max-width:550px) {
+                    margin-left: 2rem;
+                }
+            }
+            p {
+                color: $blue;
+            }
+            a {
+                img {
+                    @media only screen and (max-width:550px) {
+                        width: 50px;
+                    }
+                }
+            }
+        }
+        &__img {
+            position: relative;
+            top: 1rem;
+            left: 2rem;
+            @media only screen and (max-width:550px) {
+                width: 40px;
+                top: 0;
+                left: 2rem;
+            }
+        }
+        &__btn {
+            margin-top: 2rem;
+            display: flex;
+            justify-content: center;
+            @media only screen and (max-width:550px) {
+                margin-top: 1rem;
+            }
+            button {
+                padding: 0.5rem 2rem;
+                background-color: $blue;
+                border-radius: 25px;
+                font-size: 24px;
+                color: #fff;
+                cursor: pointer;
+                @media only screen and (max-width:550px) {
+                    font-size: 18px;
+                }
+            }
         }
     }
 }
