--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,8 @@
 
 @import 'components/slider';
 @import 'components/modals';
+@import 'components/catalog-menu';
+@import 'components/burger';
 
 
 html {
