--- a/src/assets/scss/components/burger.scss
+++ b/src/assets/scss/components/burger.scss
@@ -59,7 +59,9 @@
         top: 0;
         right: 0;
         width: 100%;
-        height: 100%;
+        height: 45%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+        rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
         opacity: 0;
         transform-origin: right top;
         transform: scale(0);
