--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -2,8 +2,10 @@
     padding-top: 2rem;
     border-top: 1px solid #666;
     @media only screen and (max-width: 568px) {
+        position: relative;
+        top: -100px;
         padding-top: 0;
-        margin-top: 4rem;
+        margin-top: 10rem;
     }
     &-content {
         display: grid;
