--- a/src/assets/scss/components/header-catalog.scss
+++ b/src/assets/scss/components/header-catalog.scss
@@ -3,6 +3,7 @@
     padding: 0 3rem;
     background: $blue;
     line-height: 46px;
+    border-radius: 25px;
     color: #FFFFFF;
     cursor: pointer;
     &::before {
@@ -33,7 +34,7 @@
 // duration: unit ms
 $elastic: (position: left,
   width: 300,
-  backgroundColor: #7c7fe0,
+  backgroundColor: #fff,
   duration: 300,
 );
 
@@ -108,11 +109,11 @@ $duration: map-get($elastic, 'duration');
   z-index: 200;
 
   @if ($position==right) {
-    transform: translate(100%, 0);
+    transform: translate(0, 100%);
   }
 
   @else if ($position==left) {
-    transform: translate(-100%, 0);
+    transform: translate(0, 100%);
   }
 
   transition: transform $duration*1ms linear,
@@ -134,48 +135,22 @@ $duration: map-get($elastic, 'duration');
     }
 
     background-color: $backgroundColor;
-    border-radius: 50%;
     z-index: -1;
     transition: all $duration*1ms linear;
-
   }
 }
 
 @keyframes elastic {
   0% {
-    border-radius: 50%;
+    border-radius: 0;
   }
 
   45% {
     border-radius: 0;
   }
 
-  65% {
-    @if ($position==right) {
-      border-top-left-radius: 40px 50%;
-      border-bottom-left-radius: 40px 50%;
-    }
-
-    @else if ($position==left) {
-      border-top-right-radius: 40px 50%;
-      border-bottom-right-radius: 40px 50%;
-    }
-  }
-
   80% {
     border-radius: 0;
-  }
-
-  90% {
-    @if ($position==right) {
-      border-top-left-radius: 20px 50%;
-      border-bottom-left-radius: 20px 50%;
-    }
-
-    @else if ($position==left) {
-      border-top-right-radius: 20px 50%;
-      border-bottom-right-radius: 20px 50%;
-    }
   }
 
   100% {
