--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -71,26 +71,53 @@
     }
     &-list {
         display: flex;
-        align-items: center;
         margin-top: 1rem;
+        align-items: center;
+        &-search {
+            @media only screen and (max-width:550px) {
+                width: 100%;
+            }
+        }
         &-item {
+            display: flex;
+            margin-left: 2rem;
+            @media only screen and (max-width:550px) {
+                margin-left: 0;
+            }
             &:last-child {
                 margin-left: auto;
                 @media only screen and (max-width:550px) {
                     margin-left: 0;
                 }
             }
+            ul {
+                li {
+                    a {
+                        color: $blue;
+                        font-size: 16px;
+                        font-weight: 600;
+                        transition: all ease-out .3s;
+
+                        &:hover {
+                            color: #666;
+                        }
+                    }
+                }
+            }
             input {
-                width: 200px;
-                padding: 5px 10px;
+                padding: 5px 20px;
                 border: 1px solid $yellow;
+                border-radius: 25px;
                 font-size: 16px;
+                @media only screen and (max-width:550px) {
+                    width: 100%;
+                }
             }
         }
         &__item {
             display: flex;
+            margin-left: 1rem;
             justify-content: space-between;
-            margin-left: 3rem;
             @media only screen and (max-width:550px) {
                 display: grid;
             }
@@ -99,13 +126,12 @@
                     margin-bottom: 1rem;
                 }
                 &:not(:first-child) {
-                    margin-left: 1rem;
                     @media only screen and (max-width:550px) {
                         margin-left: 0;
                     }
                 }
                 a {
-                    margin-left: 2rem;
+                    margin-left: 2.5rem;
                     color: $blue;
                     font-size: 16px;
                     font-weight: 600;
