--- a/src/assets/scss/components/header-catalog.scss
+++ b/src/assets/scss/components/header-catalog.scss
@@ -1,5 +1,6 @@
 .header-burger {
     position: relative;
+    display: inline-block;
     padding: 0 3rem;
     background: $blue;
     line-height: 46px;
