--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -106,7 +106,7 @@
             }
             input {
                 padding: 5px 20px;
-                border: 1px solid $yellow;
+                border: 1px solid $blue;
                 border-radius: 25px;
                 font-size: 16px;
                 @media only screen and (max-width:550px) {
