--- a/src/assets/scss/components/category-menu.scss
+++ b/src/assets/scss/components/category-menu.scss
@@ -3,15 +3,37 @@
     @media only screen and (max-width: 1366px) {
         padding: 1rem;
     }
+    @media only screen and (max-width: 550px) {
+        display: flex;
+        margin-top: 2em;
+        justify-content: center;
+    }
+    @media only screen and (max-width: 325px) {
+        margin-top: 0;
+    }
     ul {
         li {
+            display: flex;
+            align-items: center;
             margin-bottom: 2rem;
             @media only screen and (max-width: 1366px) {
                 margin-bottom: .5rem;
             }
-            a {
-                color: $blue;
+            @media only screen and (max-width: 550px) {
+                margin-bottom: 1rem;
+            }
+            img {
+                margin-right: 0.5em;
                 @media only screen and (max-width: 1366px) {
+                    width: 20px;
+                }
+            }
+            a {
+                color: #000;
+                @media only screen and (max-width: 1366px) {
+                    font-size: 12px;
+                }
+                @media only screen and (max-width: 550px) {
                     font-size: 16px;
                 }
             }
